@@ -1,3 +1,7 @@
+2005-02-08 Shachar Shemesh
+	* Add a "no-archive-mode" switch, which means file permissions and
+	  timestamp are not copied.
+
 Version 0.03
 
 2005-02-06 Shachar Shemesh
